# semantic_owl_api

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: nightly.yml  rust.yml  stable.yml
doc/: refs.md
semantic_owl_api/: Cargo.toml  README.md
semantic_owl_api/src/: lib.rs
semantic_owl_api/src/declarations/: mod.rs  owl.rs  rdf.rs  std_prefix_names.rs  turtle.rs
semantic_owl_api/src/loader/: load.rs  mod.rs  parsers.rs  turtle.rs
semantic_owl_api/src/loader/parsers/: mod.rs  ttl_parser.rs
semantic_owl_api/tests/: parsers_test.rs
semantic_owl_cli/: Cargo.toml  README.md
semantic_owl_parser/: Cargo.toml  README.md
testdata/: README.md
testdata/turtle/: EventOntology.ttl
