[package]
name = "semantic_owl_api"
version = "0.0.1"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.6.0", features = ["full"] }
petgraph = "0.5.1"
petgraph-graphml = "2.0.1"
regex = "1.5.4"
nom = "6.1.2"

