[package]
name = "semantic_owl_api"
version = "0.0.1"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

[dependencies]
bytes = { version = "1.0.1", features = ["serde"] }
indicatif = "0.16.2"
nom = "6.1.2"
petgraph = "0.5.1"
petgraph-graphml = "2.0.1"
regex = "1.5.4"
tokio = { version = "1.6.1", features = ["full"] }


