[package]
name = "semantic_owl_api"
version = "0.0.1"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

[dependencies]
bytes = { version = "1.0.1", features = ["serde"] }
indicatif = "0.16.2"
nom = "6.2.1"
petgraph = "0.5.1"
petgraph-graphml = "2.0.1"
tokio = { version = "1.8.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4.2"





