[package]
name = "semantic_owl_cli"
version = "0.1.0"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.semantic_owl_api]
path = "../semantic_owl_api"
version = "0.0.1"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
petgraph = "0.5.1"
