[package]
name = "semantic_owl_cli"
version = "0.0.1"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"


[dependencies.semantic_owl_api]
path = "../semantic_owl_api"
version = "0.0.1"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
petgraph = "0.5.1"
clap = "2.33.3"
