[package]
name = "semantic_owl_cli"
version = "0.0.1"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
indicatif = "0.16.2"
tokio = { version = "1.6.0", features = ["full"] }

[dependencies.semantic_owl_api]
path = "../semantic_owl_api"
version = "0.0.1"
