[package]
name = "semantic_owl_parser"
version = "0.1.0"
authors = ["DavidDexter <dmwangi@kineticengines.co.ke>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
petgraph = "0.5.1"
